--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,3 +14,16 @@ dependencies = [
     "rich>=14.2.0",
     "textual>=7.3.0",
 ]
+
+[dependency-groups]
+dev = [
+    "ruff>=0.14.13",
+]
+
+[tool.ruff]
+line-length = 88
+target-version = "py311"
+
+[tool.ruff.lint]
+select = ["E", "F", "I", "W", "UP"]
+ignore = []
