Add type hints and fix type errors

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,10 @@ dependencies = [
 
 [dependency-groups]
 dev = [
+    "mypy>=1.19.1",
+    "pandas-stubs>=2.3.3.260113",
     "ruff>=0.14.13",
+    "types-requests>=2.32.4.20260107",
 ]
 
 [tool.ruff]
